--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 style="color:brown;">welcome to apna time &lt; h1&gt;</h1> 
-    <h2>welcome to amit pandey</h2>
+    <h2>welcome to nasiry</h2>
     <h3>welcome to badal pandey</h3>
     <h4>welcome to apna school</h4>
     <h5>welcome to apna class</h5>
